<resources>
    <string name="app_name">Моя Фасоль. Доставка</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="main">Главная</string>
    <string name="orders">Заказы</string>
    <string name="profile">Профиль</string>
    <string name="sign_in">Вход</string>
    <string name="sign_in2">Войти</string>
    <string name="sas">Заголовок</string>
    <string name="profile_data">Личные данные</string>
    <string name="prefix">"+7 "</string>
    <string name="tel_text">Регистрация</string>
    <string name="tel_text2">для оформления заказа и доставки</string>

    <string name="done">Готово</string>

    <string name="login">Логин</string>
    <string name="password">Пароль</string>

    <string name="name">Имя</string>
    <string name="number">Номер телефона</string>
    <string name="save">Сохранить</string>
    <string name="search">Поиск</string>
    <string name="Category_Image_Description">Изображение категории</string>

    <string name="orders_auth">Перейдите в каталог, чтобы сделать первый заказ.</string>
    <string name="orders_auth_first">У вас пока нет заказов.</string>
    <string name="orders_auth1">В каталог</string>
    <string name="register">Зарегистрироваться</string>

    <string name="support">Служба поддержки</string>
    <string name="information">Информация</string>
    <string name="signOut">Выйти</string>
    <string name="subcategory_title">Заголовок подкатегории</string>
    <string name="subcategory">Подкатегория</string>
    <string name="back">Назад</string>
    <string name="category_title">Заголовок категории</string>
    <string name="product_name">Наименование продукта</string>
    <string name="product_price">Цена</string>
    <string name="description">Описание</string>
    <string name="add">Добавить</string>
    <string name="basket">Корзина</string>
    <string name="sum">сумма</string>
    <string name="close">Закрыть</string>
    <string name="delete_basket">Очистить корзину</string>

    <string name="product_image">Изображение продукта</string>
    <string name="count">Кол шт</string>
    <string name="arrange">Оформить заказ</string>
    <string name="remove">Убрать</string>
    <string name="token_update">Обновить токен</string>
    <string name="privacy_policy">Политика конфиденциальности</string>
    <string name="info_title">Заголовок раздела</string>
    <string name="product_info_condition">Авторизуйтесь, чтобы добавить продукт в корзину</string>
    <string name="make_order">Оформление заказа</string>
    <string name="delivery_address">Адрес доставки</string>
    <string name="comment">Комментарий к заказу</string>
    <string name="delivery_method">Способ доставки</string>
    <string name="self">Самовывоз</string>
    <string name="address">По адресу</string>
    <string name="confirm_order">Подтвердить заказ</string>
    <string name="order_number">Номер заказа:</string>
    <string name="example_order_number">210213-073722</string>
    <string name="order_date">Дата заказа:</string>
    <string name="example_order_date">13.02.2021</string>
    <string name="order_address">Адрес доставки:</string>
    <string name="example_order_address">ул. Тургеневская, 10/6</string>
    <string name="order_amount">Сумма:</string>
    <string name="example_order_amount">3301 ₽</string>
    <string name="one_product_name">Product name</string>
    <string name="status">Статус</string>
    <string name="remove_order">Отменить заказ</string>
</resources>