<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="180dp"
    android:layout_height="238dp"
    android:layout_margin="16dp"
    app:cardCornerRadius="14dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/product_image"
            android:layout_width="180dp"
            android:layout_height="160dp"
            android:contentDescription="@string/Category_Image_Description"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/product_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/product_name"
            android:textAlignment="center"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/product_price"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/product_price"
            android:textAlignment="center"
            android:textSize="20sp" />

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>